feat: add endpoint for full page load